Quorum/Library/Tests/Expressions/Pass/AndBooleanBoolean.quorum
class Main
    action Main
        output true and true
        output true and false
        output false and true
        output false and false
    end
end