Quorum/Library/Tests/Expressions/Fail/BadActionName.quorum
class Bob
    action Main
        output "Hi, from Bob_Interface"
    end

    action Test_
    end
end